Consolidated Analysis cosmetics and functionality changes 1. Added Upload icon and File Uploaded image. 2. Modified HTML and CSS to make consolidated page closer to the web design. 3. Fixed spacings of div for both desktop and mobile implementation 4. Implemented the html change when file is input. 5. Added reset functionality when file is input

--- a/code/static/css/styles.css
+++ b/code/static/css/styles.css
@@ -22,7 +22,6 @@ html {
     padding-bottom: 10rem !important;
 }
 img {
-	width: 100%;
     -webkit-filter: drop-shadow(5px 5px 5px #666666);
     filter: drop-shadow(5px 5px 5px #666666);
 }
@@ -246,9 +245,6 @@ footer {
     }
     p {
         font-size: 15px !important;
-    }
-    img {
-        width: 90%;
     }
   }
 
